Two issues from peer feedback resolved: width exceeds vw on narrow devices, previousInput did not stay on screen until new numeric input added. Both resolved.

--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,8 @@
     width: 60vh;
     min-width: 300px;
     min-height: 450px;
+    max-width: 412px;
+    max-height: 618px;
 
     box-shadow: 0.3em 0.5em 1em darkgray;
     /* background-color: rgb(111, 109, 114); */
